--- a/www/index.html
+++ b/www/index.html
@@ -5,14 +5,18 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>I made top charts</title>
+        <title>I LOVE CIT</title>
     </head>
     <body>
+	<center>
         <div class="app">
-            <h1>You use to call me on my cellphone</h1>
+            <h1>I did something in CIT</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">By Drake</p>
+                <p class="event listening">Below is what I did in CIT</p>
                 <p class="event received">Device is Ready</p>
+		<input type="button" onclick ="" value="IMC CIT">
+		<p> <a href="Concours2.html/"> </p>
+		<input type="button" onclick ="" value="IMC Calculator">
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
@@ -20,5 +24,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+		<center/>
     </body>
 </html>
