--- a/www/index.html
+++ b/www/index.html
@@ -5,25 +5,36 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>I LOVE CIT</title>
-    </head>
+			<title>I LOVE CIT</title>
+		</head>
     <body>
-	<center>
-        <div class="app">
-            <h1>I did something in CIT</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Below is what I did in CIT</p>
-                <p class="event received">Device is Ready</p>
-		<input type="button" onclick ="" value="IMC CIT">
-		<p> <a href="Concours2.html/"> </p>
-		<input type="button" onclick ="" value="IMC Calculator">
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-		<center/>
+		<center>
+				<img src="CITicon.png" />
+				<h1>I did something in CIT</h1>
+				<div>
+					<p class="event listening">Below is what I did in CIT</p>
+					<p class="event received">Device is Ready</p>
+					<p>
+						<a href="POLYGON.html"><input type="button" onclick ="" value="CIT"></a>
+					</p>
+					<p>
+						<a href="Concours2.html"><input type="button" value="IMC Calculator"></a>
+					</p>
+					<p>
+						<a href="NBA Playoffs Tice.html"><input type="button" onclick ="" value="For NBA Fans"></a>
+					</p>
+					<p>
+						<a href="StopCopying.html"><input type="button" onclick ="" value="Click if you hate Noan because he copied you"></a>
+					</p>
+			   </div>
+		</center>
+		
+		
+	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript">
+	app.initialize();
+	</script>
+
     </body>
 </html>
